# lambda-fairy.github.io

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  .travis.yml  CNAME  Cargo.toml  Makefile  README.md  README.mkd  Templates.hs  analytics.html  circle.yml  code.mkd  cv.md  cv.mkd  deploy.sh  hakyll.hs  index.html  index.md  index.mkd  lambda-fairy.cabal  lfairy.cabal  mixpanel.html  site.hs  styles.css
.github/workflows/: ci.yml
.travis/: deploy_key.enc  known_hosts  ssh_config
Templates/: Blog.hs  Core.hs  Default.hs
blog/: 0-draft-0-comments.md  0-draft-0-dt-cannon.md  0-draft-0-html.md  0-draft-0-just-intonation.md  0-draft-0-lean-popular.md  0-draft-0-lose-money-on-manifold.md  0-draft-0-maud-the-yellow-brick-road.md  0-draft-0-new-website-part-2.md  0-draft-0-opener-main.md  0-draft-0-otamatone.md  2013-06-12-first-post.md  2013-07-24-twelve-inches.md  2014-04-26-hello-gsoc.md  2014-05-13-hackage-part-2.md  2014-05-20-crystal-caves.md  2014-07-09-hackage-part-3.md  2014-08-30-hackage-part-4.md  2014-10-05-https.md  2016-10-14-maud-is-fast.md  2016-10-28-poles.md  2016-12-29-if-chain.md  2017-03-12-interruptible-sleep.md  2017-03-13-chunky-bacon.md  2017-04-01-rusts-fatal-flaw.md  2021-09-09-new-website-part-1.md  2021-09-26-new-website-part-2.md  2021-12-15-game-engine-trap.md  2022-11-04-monads.md  2022-12-10-opener-main.md  2023-07-29-casino.md
blog/casino/: index.html
blog/chunky-bacon/: index.html
blog/comments/: index.html
blog/crystal-caves/: index.html
blog/dt-cannon/: index.html
blog/first-post/: index.html
blog/game-engine-trap/: index.html
blog/hackage-part-2/: index.html
blog/hackage-part-3/: index.html
blog/hackage-part-4/: index.html
blog/hello-gsoc/: index.html
blog/html/: index.html
blog/https/: index.html
blog/if-chain/: index.html
deploy/: deploy
images/: lavender.xcf
posts/: 2013-06-12-a-first-post.markdown  2013-06-12-first-post.markdown  2013-06-12-first-post.md  2013-07-24-twelve-inches.markdown  2013-07-24-twelve-inches.md  2014-01-08-eevee.markdown  2014-01-08-on-pokemon.markdown  2014-04-26-hello-gsoc.markdown  2014-04-26-hello-gsoc.md  2014-05-13-hackage-part-2.md  2014-05-13-hacking-on-hackage.markdown  2014-05-13-hacking-on-hackage.md  2014-05-20-crystal-caves.markdown  2014-07-09-hackage-part-3.markdown  2014-07-09-hackage-part-3.md  2014-08-30-hackage-part-4.md  2014-10-05-https.md  2016-10-14-maud-is-fast.md  2016-10-28-poles.md  2016-12-29-if-chain.md  2017-03-12-interruptible-sleep.md  2017-03-13-chunky-bacon.md  2017-04-01-rusts-fatal-flaw.md
src/: page.rs  views.rs
styles/: styles.sass
templates/: default.hamlet
(+15 files in other folders)
