[package]
name = "lambda_fairy"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "*"
chrono = "*"
if_chain = "*"
itertools = "*"
once_cell = "*"
maud = "*"

[dependencies.comrak]
version = "*"
default-features = false

[dependencies.syntect]
version = "*"
default-features = false
features = ["assets", "dump-load", "html", "regex-onig"]
