name: lambda-fairy
version: 0
build-type: Simple
extra-source-files: README.md
cabal-version: >= 1.8

executable lambda-fairy
    main-is: site.hs
    ghc-options: -Wall -fno-warn-unused-do-bind -fno-warn-missing-signatures

    build-depends:
        base == 4.*,
        containers,
        filepath,
        hakyll,
        hakyll-sass,
        lucid,
        pandoc,
        pandoc-types,
        text,
        transformers

    other-modules:
        Templates
        Templates.Blog
        Templates.Core
        Templates.Default
