name: lfairy
version: 0
build-type: Simple
extra-source-files: README.md
cabal-version: >= 1.8

executable lfairy
    main-is: site.hs
    ghc-options: -Wall -fno-warn-unused-do-bind -fno-warn-missing-signatures

    build-depends:
        base == 4.*,
        containers,
        filepath,
        hakyll == 4.13.*,
        hakyll-sass,
        lucid,
        pandoc == 2.7.*,
        pandoc-types,
        text,
        transformers

    other-modules:
        Templates
        Templates.Blog
        Templates.Core
        Templates.Default
